@@ -5,8 +5,8 @@ import cn.luorenmu.common.auto.Automatic;
 import cn.luorenmu.entiy.Config;
 
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.Objects;
@@ -18,30 +18,26 @@ import java.util.Set;
  * Date 2023.10.28 19:29
  */
 public class ScanUtil {
-    public static final Config config = new Config();
+    public static final Config CONFIG = new Config();
+    public static final String PATH;
 
     static {
         Properties prop = new Properties();
         String path = Objects.requireNonNull(Main.class.getClassLoader().getResource("cn/luorenmu")).getFile();
         if (path.contains("%")) {
-            try {
-                path = URLDecoder.decode(path, "UTF-8");
-            } catch (UnsupportedEncodingException e) {
-                LoggerUtil.log.warning(e.toString());
-                throw new RuntimeException("system path get failed, use english plz");
-            }
+            path = URLDecoder.decode(path, StandardCharsets.UTF_8);
         }
-        path = path.substring(1, path.lastIndexOf("cn"));
+        PATH = path.substring(1, path.lastIndexOf("cn"));
         try {
-            prop.load(Files.newInputStream(Paths.get(path + "config.properties")));
+            prop.load(Files.newInputStream(Paths.get(PATH + "config.properties")));
         } catch (IOException e) {
             LoggerUtil.log.warning(e.toString());
-            throw new RuntimeException("config load failed  ):");
+            throw new RuntimeException("CONFIG load failed  ):");
         }
 
         Set<Object> keySet = prop.keySet();
         for (Object o : keySet) {
-            Automatic.AutoSetFieldEquals(config, Config.class, o.toString(), String.class, prop.get(o));
+            Automatic.AutoSetFieldEquals(CONFIG, Config.class, o.toString(), String.class, prop.get(o));
         }
 
     }
